lustre-collector/src/snapshots/lustre_collector__io_latency_stats_parser__tests__io_latency_stats_read_only.snap
---
source: lustre-collector/src/io_latency_stats_parser.rs
expression: result
---
(
    (
        StatsHeader {
            snapshot_time: "1775128065.882649010",
            start_time: Some(
                "1775125270.244958271",
            ),
        },
        [
            BrwStats {
                name: "io_time_1024K",
                unit: "ios",
                buckets: [
                    BrwStatsBucket {
                        name: 512,
                        read: 3,
                        write: 0,
                    },
                    BrwStatsBucket {
                        name: 1024,
                        read: 1,
                        write: 0,
                    },
                ],
            },
        ],
    ),
    "",
)
